syntax = "proto3";

package playerClient;
import "protobuf-response.proto";
import "google/protobuf/wrappers.proto";

option java_package = "org.dbs.mgmt.client";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//======================================================================================================================
// Players credentials
//======================================================================================================================
message PlayerCredentials {
  string playerLogin = 3;
  string playerPassword = 10;
  string playerStatus = 16;
}

message PlayerCredentialsRequest {
  string playerLogin = 3;
}

message  PlayerCredentialsDto {
  string playerLogin = 3;
  string playerPassword = 10;
}

// createOrUpdate
//======================================================================================================================

message CreateOrUpdatePlayerRequest {
  reserved                      1 ;
  reserved                      "playerId"; // 1
  optional string oldLogin = 2;
  string          login = 3;
  optional string oldEmail = 4;
  optional string email = 5;
  optional string phone = 6;
  optional string firstName = 7;
  optional string middleName = 8;
  optional string lastName = 9;
  optional string password = 10;
  optional uint32 birthDate = 11;
  optional string country = 12;
  optional string gender = 13;
  optional string avatar = 14;
  optional string smallAvatar = 15;
  //optional string status       016;
}

// responseEntity
message  CreatedPlayerDto {
  string          playerLogin = 3;
  string          status = 16;
  string          email = 5;
}

// updateStatus
//======================================================================================================================
message UpdatePlayerStatusRequest {
  string modifiedLogin = 3;
  string status = 16;
}

// responseEntity
message CreatedPlayerStatus {
  string modifiedLogin = 3;
  string newStatus = 16;
}

// updatePassword
//======================================================================================================================
message UpdatePlayerPasswordRequest {
  string modifiedLogin = 10;
  string newPassword = 30;
}

// responseEntity
message CreatedPlayerPassword {
  string modifiedLogin = 10;
}
